# DSA

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  insta.sh  main.cpp  readmi.txt  runTests  runcoverage.sh
DatAlgo/: Math.cpp  whattotest.cpp
DatAlgo/STL/: remov_idioms.cpp
DatAlgo/creational/: singleton2.cpp
DatAlgo/graph/: readme.md
DatAlgo/linkedlist/: LLDisplay.c  LLclass.cpp  Readme.txt
DatAlgo/patterns/creational/singleton/: singleton.cpp  singleton1.cpp
dep/: install_gcovr.sh
